@startuml ER 

entity "Users" as user {
  *id : INT
  --
  *username : VARCHAR
  *email : VARCHAR
  *password : VARCHAR
  *name : VARCHAR
  points : INT
  portions_given : INT
  portions_received : INT
  profile_picture : VARCHAR
  latitude : DECIMAL
  longitude : DECIMAL
  created_at : TIMESTAMP
}

entity "Advertisements" as advertisement {
  *id : INT
  *creator_id : INT
  --
  *title : VARCHAR
  *description : TEXT
  *point_cost : INT
  date_posted : TIMESTAMP
  date_of_deletion : TIMESTAMP
  date_of_delivery : TIMESTAMP
  *location_lat : DECIMAL
  *location_lng : DECIMAL
  *building_name : VARCHAR
  *room_number : VARCHAR
  *portions : INT
  path_to_picture : VARCHAR
  *state_of_ad : ENUM('ACTIVE', 'INACTIVE', 'DELETED')
}

entity "Allergens" as allergen {
  *allergen_id : INT
  --
  *allergen_name : VARCHAR
  *id : INT
}

entity "Requests" as request {
  *request_id : INT
  *id : INT
  *con_id : INT
  --
  *status : ENUM('PENDING', 'ACCEPTED', 'REJECTED')
  *claimed_portions : INT
  date_posted : TIMESTAMP
  accepted_at : TIMESTAMP
  rejected_at : TIMESTAMP
  updated_at : TIMESTAMP
  state_of_delivery : ENUM('DELIVERED', 'MISSED')
  missedDeliveryPenalty : BOOLEAN
  penaltyApplied : BOOLEAN
}

entity "Ratings" as rating {
  *rating_id : INT
  *req_id : INT
  *rater_id : INT
  *rated_user_id : INT
  --
  score : INT
  comment : TEXT
}

entity "Admins" as admin {
  *admin_id : INT
  --
  *username : VARCHAR
  *email : VARCHAR
  *password : VARCHAR
  created_at : TIMESTAMP
}

user "1" --> "0...N" advertisement : "creates"
user "1" --> "0...N" request : "makes"
user "1" --> "0...N" rating : "gives"
user "1" --> "0...N" request : "approves"
advertisement "1" --> "0...N" allergen : "has"
advertisement "1" --> "0...N" request : "receives"
request "1" --> "1" rating : "has"
admin "1...N" --> "0...N" user : "views"
@enduml